2012-02-03 Jérôme Pasquier  <rainbru@free.fr>

	* configure.in (AC_OUTPUT): added previous Makefile.
	* skin01/wordpress/pattern/Makefile.am (EXTRA_DIST): added missing 
	files to archives.
	* skin01/wordpress/Makefile.am (SUBDIRS): pattern/ was missing.

	* ChangeLog: replaced changelog.dev with a GNU formatted changelog.