@@ -29,6 +29,7 @@
 - [X] Avoid absolute positionning to be able to use WP admin bar (top:28px;)
 - [X] Find a way to add a AddThis.com div
 **** TODO Wordpress theme development
+     CLOCK: [2012-02-04 sam. 07:38]--[2012-02-04 sam. 08:10] =>  0:32
      CLOCK: [2012-02-03 ven. 09:43]--[2012-02-03 ven. 10:04] =>  0:21
      CLOCK: [2011-12-31 sam. 11:08]--[2011-12-31 sam. 11:32] =>  0:24
      CLOCK: [2011-12-30 ven. 17:10]--[2011-12-30 ven. 17:58] =>  0:48
@@ -128,7 +129,7 @@ the patternClearHeaderLeft div.
 			It seems to be related to the common/skin.css file
                   - [X] If it works, modify css files to remove inline CSS
 			from index.php
-                  - [ ] Merge skin01/wordpress and pattern/ after a final test
+                  - [X] Merge skin01/wordpress and pattern/ after a final test
 - [X] Must test archive for missing files
 - [ ] The header style must work
       The ../common/skin.css link was removed from header.php
@@ -139,7 +140,7 @@ the patternClearHeaderLeft div.
 - [ ] Searchbox is again misplaced
 - [ ] Enable the RSS feed for browser that support it
 - [ ] Use the Universal Edit Button feature (as RSS feed)
-- [ ] Should add the "Bookmark the permalink." on single.php
+- [ ] Should add the "Bookmark the permalink." in single.php
 - [ ] HTML5 validation
 - [ ] See the checklist at http://codex.wordpress.org/Theme_Development
 - [ ] Make an 'About' page and a first post about the new website/blog
