@@ -21,6 +21,7 @@ rainbruWebsite - GPLv2 - Create a skin for our Wordpress/Foswiki
    Please update configure.in for each revision
 
 * v0.0.0-10 (22 dec. 2011 - ???) FT ??:??
+- (4) Merged skin01/wordpress and pattern/
 - (3) Test archive for missing files
 - Inline style from pattern/index.php now in style.css
 - Find a way to avoid dead links (see skin01/wordpress/header.php)
