@@ -23,6 +23,5 @@ AC_OUTPUT([
   skin01/foswiki/Makefile		\
   skin01/static/Makefile		\
   skin01/wordpress/Makefile		\
-  skin01/wordpress/images/Makefile	\
-  skin01/wordpress/pattern/Makefile
+  skin01/wordpress/images/Makefile
 ])
